# Pyraat

./: .gitignore  .readthedocs.yaml  .travis.yml  CHANGES.txt  MANIFEST  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: main.yml  publish.yml
continuous-integration/travis/: install.sh
docs/: Makefile  make.bat  praat_script_types.rst
docs/source/: basic.rst  conf.py  index.rst  praat_script_types.rst
praatinterface/: Praat.py  __init__.py  mahalanobis.py  scripts.py
praatinterface/praatScripts/: extract.praat  formants.praat  intensity.praat  pitch.praat  spectroPic.praat  waveformPic.praat
pyraat/: __init__.py  exceptions.py  parse_outputs.py  praat_script.py  run_scripts.py
tests/: conftest.py  test_long.py  test_praat.py  test_short.py
tests/data/praat_scripts/: COG.praat  COG_long.praat  formant_point.praat  formant_point_long.praat  formant_track_long.praat  sibilant_jane.praat
