[metadata]
name = Pyraat
description = Interface for running Praat scripts through Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mmcauliffe/Pyraat
author = Michael McAuliffe
author_email = michael.e.mcauliffe@gmail.com
maintainer = Michael McAuliffe
maintainer_email = michael.e.mcauliffe@gmail.com
license = MIT
license_file = LICENSE
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Multimedia :: Sound/Audio :: Speech
    Topic :: Scientific/Engineering
    Topic :: Text Processing :: Linguistic
keywords =
    phonetics
    praat
    acoustics

[options]
packages = find:
python_requires = >=3.8

[options.packages.find]
exclude = tests

[options.extras_require]
docs =
    sphinx
    numpydoc
    mock
    sphinx_rtd_theme
testing =
    pytest

[tool:pytest]
testpaths = tests
norecursedirs = data
